# nlp_experiments

./: pyproject.toml
src/: __init__.py  __main__.py
src/btrel/: __init__.py
tests/: test_basic_trigram_english_corpus_parsing.py  test_main.py
