[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jeremy Mann <jmann227@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
pyyaml = "^6.0"
torch = "^2.0.0"
typer = "^0.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-xdist = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
